--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,60 +1,34 @@
 {
-  "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "paths": {
-      "@common/*": [
-        "./src/components/common/*"
-      ],
-      "@components/*": [
-        "./src/components/*"
-      ],
-      "@type/*": [
-        "./src/types/*"
-      ],
-      "@hoc/*": [
-        "./src/hoc/*"
-      ],
-      "@hooks/*": [
-        "./src/hooks/*"
-      ],
-      "@helpers/*": [
-        "./src/helpers/*"
-      ],
-      "@public/*": [
-        "./public/*"
-      ],
-      "@/*": [
-        "./src/*"
-      ]
+    "compilerOptions": {
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "skipLibCheck": true,
+        "strict": true,
+        "noEmit": true,
+        "esModuleInterop": true,
+        "module": "esnext",
+        "moduleResolution": "bundler",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "jsx": "preserve",
+        "incremental": true,
+        "paths": {
+            "@common/*": ["./src/components/common/*"],
+            "@components/*": ["./src/components/*"],
+            "@type/*": ["./src/types/*"],
+            "@hoc/*": ["./src/hoc/*"],
+            "@hooks/*": ["./src/hooks/*"],
+            "@helpers/*": ["./src/helpers/*"],
+            "@constants/*": ["./src/constants/*"],
+            "@public/*": ["./public/*"],
+            "@/*": ["./src/*"]
+        },
+        "plugins": [
+            {
+                "name": "next"
+            }
+        ]
     },
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
-  },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "exclude": ["node_modules"]
 }
