--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.4",
     "@reduxjs/toolkit": "^2.2.3",
     "framer-motion": "^11.0.20",
     "next": "14.1.4",
